syntax = "proto3";

option go_package = "ashishkujoy/queue/net;netinternal";

message EnqueueRequest {
    bytes message = 1;
}

message EnqueueRequestResponse {
    bool success = 1;
}

message ObserveQueueRequest {
    uint64 consumerId = 1;
}

message QueueMessage {
    bytes message = 1;
}

service QueueService {
    rpc Enqueue(EnqueueRequest) returns (EnqueueRequestResponse);
    rpc ObserveQueue(ObserveQueueRequest) returns (stream QueueMessage);
}